<!--
  ~ Copyright (c) 2017.
  ~ qsboy.com 版权所有
  -->

<resources>
    <string name="app_name">防撤回神器</string>
    <string name="desc">开启后，就能截获对方所撤回的消息啦\n如果这个开关被关闭软件是如法工作的哦</string>
    <string name="service_label">Message Captor</string>

    <string name="domain">www.android.com</string>

    <string name="step1">打开辅助功能的开关 ,\n然后打开 微信 或者 QQ \n应该会收到一条表示成功的顶部弹窗通知</string>
    <string name="step2">打开他们的\"通知显示详情\"\n使收到的消息显示内容而不是某某发来一条消息</string>
    <string name="step3">[重要]如果没有的话请重启\n或者尝试重新打开开关</string>

    <string name="warn1">\t\t\t\t建议在刚开始使用软件的时候打开调试开关, 如果能显示截获的消息 软件才是正常工作</string>
    <string name="warn2">\t\t\t\t需要把我的软件设为 白名单/受保护的应用/进程带锁, 不然辅助功能的开关会自动关闭</string>
    <string name="warn3">\t\t\t\t重新查找撤回的消息需要双击撤回的地方, 如果只是想显示只需单击\n\n\t\t\t\t三击: 删除最后加进来的一条数据. 因为在滚屏的时候可能会乱加, 如果发现找错, 可以尝试三击</string>
    <string name="warn4">\t\t\t\t只有打开软件之后的撤回消息能看到, 且只有打开消息提醒的联系人/群才能看到</string>
    <string name="warn5">\t\t\t\t查找撤回图片的原理是到QQ图片缓存目录下去查找与撤回消息同时创建的文件, 而曾经发过的图片只会生成链表而不会重新创建文件所以查找不到</string>
    <string name="warn6">\t\t\t\t三星手机请检查是否给了外部文件读写权限(查找图片要用)</string>
    <string name="warn7">\t\t\t\t魅族的辅助功能开关请到 "辅助功能-无障碍" 里打开</string>
    <string name="warn8">\t\t\t\t微信暂时看不了撤回的图片</string>
    <string name="warn9">\t\t\t\tQQ 微信都看不了语音</string>
    <string name="warn10">\t\t\t\t还未完全支持Emoji, 可能会影响查找</string>
    <string name="warn11">\t\t\t\t软件基本原理就是通过辅助功能读取通知栏, 以及屏幕底端的内容. 保存到本地, 并在需要的时候查找, 所以某些情况会失败:</string>
    <string name="warn12">1: QQ聊天时屏幕不在最底端</string>
    <string name="warn13">2: 在QQ主界面</string>
    <string name="warn14">3: 与在QQ刚加的加好友\n面对面聊天时</string>
</resources>
